--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -147,16 +147,20 @@ body {
     float: right;
 }
 
-#streams {
-    position: absolute;
+#streams-page {
+    position: relative;
     width: 100%;
     height: 465px;
     top: 35px;
+    box-sizing: border-box;
+    overflow-y: scroll;
+}
+#streams {
+    width: 100%;
     padding-left: 5px;
     padding-right: 5px;
     padding-top: 10px;
     box-sizing: border-box;
-    overflow-y: scroll;
 }
 #streams .stream {
     position: relative;
@@ -172,6 +176,16 @@ body {
     background-color: #403146;
     transition: 0.5s;
 }
+
+#informations {
+    text-align: center;
+    color: #6a6a6a;
+    font-size: 12px;
+    font-weight: bold;
+    font-style: italic;
+    padding: 0px 5px 10px 5px;
+}
+
 .stream .stream-pic {
     width: 115px;
 }
