--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -14,7 +14,7 @@
 /* Firefox */
 * {
     scrollbar-width: 7px;
-    scrollbar-color: #1e1a20 #3b323f;
+    scrollbar-color: #1e1a20 --main-light-color;
 }
 
 /* Chrome, Edge, and Safari */
@@ -23,7 +23,7 @@
 }
 
 *::-webkit-scrollbar-track {
-    background: #3b323f;
+    background: var(--main-light-color);
 }
 
 *::-webkit-scrollbar-thumb {
@@ -33,10 +33,18 @@
 }
 
 body {
+    --main-dark-color: #262029;
+    --main-light-color: #3b323f;
+    --main-border-color: #3c3440;
+
+    --stream-element-text: #dbdbdb;
+    --stream-tags-background: #121212;
+    --stream-tags-border: #464646;
+
     font-family: 'Inter', sans-serif;
     width: 360px;
-    height: 500px;
-    background-color: #3b323f;
+    height: 570px;
+    background-color: var(--main-light-color);
     margin: 0;
     padding: 0;
 }
@@ -52,7 +60,9 @@ body {
     height: 35px;
     width: 100%;
     position: fixed;
-    background-color: #262029;
+    background-color: var(--main-dark-color);
+    border-bottom: 1px solid var(--main-border-color);
+    box-sizing: border-box;
 }
 
 #top-bar input {
@@ -150,7 +160,7 @@ body {
 #streams-page {
     position: relative;
     width: 100%;
-    height: 465px;
+    height: 500px;
     top: 35px;
     box-sizing: border-box;
     overflow-y: scroll;
@@ -167,7 +177,7 @@ body {
     height: 65px;
     overflow: hidden;
     background-color: #281f2c;
-    box-shadow: 0px 0px 5px 1px #262029;
+    box-shadow: 0px 0px 5px 1px var(--main-dark-color);
     margin-bottom: 10px;
     transition: 0.5s;
     cursor: pointer;
@@ -188,6 +198,7 @@ body {
 
 .stream .stream-pic {
     width: 115px;
+    height: 100%;
 }
 .stream .streamer-name {
     position: absolute;
@@ -212,7 +223,7 @@ body {
     box-sizing: border-box;
 }
 .stream .right-part .stream-title {
-    color: #dbdbdb;
+    color: var(--stream-element-text);
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -221,15 +232,15 @@ body {
 }
 
 .stream .right-part .stream-game {
-    color: #dbdbdb;
+    color: var(--stream-element-text);
     font-size: 13px;
 }
 .stream .right-part .viewer-count {
     position: absolute;
-    color: #dbdbdb;
+    color: var(--stream-element-text);
     padding: 2px 8px 2px 5px;
-    background-color: #121212;
-    border: 1px solid #464646;
+    background-color: var(--stream-tags-background);
+    border: 1px solid var(--stream-tags-border);
     border-radius: 15px;
     right: 3px;
     bottom: 3px;
@@ -244,10 +255,10 @@ body {
 .stream .right-part .stream-time {
     position: relative;
     display: inline-block;
-    color: #dbdbdb;
+    color: var(--stream-element-text);
     padding: 1px 7px 1px 6px;
-    background-color: #121212;
-    border: 1px solid #464646;
+    background-color: var(--stream-tags-background);
+    border: 1px solid var(--stream-tags-border);
     border-radius: 15px;
     right: 3px;
     bottom: 4px;
@@ -259,10 +270,10 @@ body {
 .stream .right-part .stream-language {
     position: relative;
     display: inline-block;
-    color: #dbdbdb;
+    color: var(--stream-element-text);
     padding: 1px 7px 1px 6px;
-    background-color: #121212;
-    border: 1px solid #464646;
+    background-color: var(--stream-tags-background);
+    border: 1px solid var(--stream-tags-border);
     border-radius: 15px;
     right: 3px;
     bottom: 4px;
@@ -274,10 +285,10 @@ body {
 .stream .right-part .stream-mature {
     position: relative;
     display: inline-block;
-    color: #dbdbdb;
+    color: var(--stream-element-text);
     padding: 1px 5px 1px 5px;
-    background-color: #121212;
-    border: 1px solid #464646;
+    background-color: var(--stream-tags-background);
+    border: 1px solid var(--stream-tags-border);
     border-radius: 15px;
     right: 3px;
     bottom: 4px;
