--- a/style/bottombar.css
+++ b/style/bottombar.css
@@ -48,7 +48,7 @@
 .tab-button .infobox {
     position: absolute;
     background-color: #000000e0;
-    color: white;
+    color: var(--color-white);
     padding: 6px 12px 6px 12px;
     font-size: 14px;
     top: 0;
