--- a/style/mainframe.css
+++ b/style/mainframe.css
@@ -239,6 +239,7 @@ body {
 .stream .right-part .stream-game {
     color: var(--stream-element-text);
     font-size: 13px;
+    font-style: italic;
 }
 .stream .right-part .viewer-count {
     position: absolute;
@@ -311,4 +312,60 @@ body {
     font-size: 12px;
     font-weight: bold;
     box-sizing: border-box;
+}
+
+#notifications-page {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    top: 35px;
+    box-sizing: border-box;
+    overflow-y: scroll;
+}
+#notifications {
+    width: 100%;
+    padding-top: 10px;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+#notifications .notification {
+    width: 170px;
+    margin-left: 2px;
+    margin-right: 2px;
+    margin-bottom: 5px;
+    padding-bottom: 5px;
+    box-sizing: border-box;
+    background-color: #2c2c2c;
+    display: inline-block;
+    color: var(--color-white);
+    text-align: left;
+    box-shadow: 0px 0px 3px 0px var(--main-dark-color);
+}
+
+.notification .streamer-name {
+    display: inline-block;
+    font-size: 16px;
+    text-align: left;
+    background-color: var(--main-dark-color);
+    padding: 3px 9px 4px 5px;
+    box-sizing: border-box;
+    max-width: 170px;
+    max-height: 25px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    color: var(--color-white);
+}
+.notification .followed-date {
+    padding: 1px 7px 1px 7px;
+    font-size: 11px;
+}
+.notification .notif-text {
+    border-top: 1px solid #545454;
+    padding: 5px 7px 0px 7px;
+    margin-top: 3px;
+    font-size: 12px;
+}
+.notification .enable-notifications {
+    float: right;
 }
