Added mouseover effect on tiles (to be used in further commits)

--- a/src/App/Content/Tiles/LivestreamTile/LivestreamTile.module.sass
+++ b/src/App/Content/Tiles/LivestreamTile/LivestreamTile.module.sass
@@ -17,6 +17,8 @@
   .streamPic
     width: 115px
     height: 100%
+    &.hovered
+      filter: blur(2px) brightness(50%)
 
   .streamerName
     position: absolute
