Added bottom-bar favorite toggling

--- a/src/App/components/BottomBar/style.module.sass
+++ b/src/App/components/BottomBar/style.module.sass
@@ -87,7 +87,12 @@
         transform: translate(11px, 5px)
 
     &.sorting
-
       img
         width: 24px
         height: 24px
+
+    &.favoriteToggle
+      padding-top: 7px
+      .favoriteToggleIcon
+        color: $color-white
+        font-size: 18px
