--- a/src/App/components/FollowedChannelsTile/style.module.sass
+++ b/src/App/components/FollowedChannelsTile/style.module.sass
@@ -14,12 +14,12 @@
   box-shadow: 0 0 3px 0 $main-dark-color
 
   .followedDate
-    padding: 1px 7px 1px 7px
+    padding: 1px 7px 5px 7px
     font-size: 11px
+    border-bottom: 1px solid #545454
 
   .notifText
-    border-top: 1px solid #545454
-    padding: 5px 7px 0 7px
+    padding: 3px 7px 1px 7px
     margin-top: 3px
     font-size: 12px
 
