Added some new fonts

--- a/src/index.sass
+++ b/src/index.sass
@@ -3,14 +3,26 @@
 @font-face
   font-family: "Inter"
   font-style: normal
-  font-weight: 400
-  src: url("chrome-extension://__MSG_@@extension_id__/fonts/Inter-Regular.ttf")
+  font-weight: normal
+  src: url("chrome-extension://__MSG_@@extension_id__/fonts/Inter/Inter-Regular.ttf")
 
 @font-face
   font-family: "Inter"
-  font-style: bold
-  font-weight: 700
-  src: url("chrome-extension://__MSG_@@extension_id__/fonts/Inter-SemiBold.ttf")
+  font-style: normal
+  font-weight: bold
+  src: url("chrome-extension://__MSG_@@extension_id__/fonts/Inter/Inter-SemiBold.ttf")
+
+@font-face
+  font-family: "Roboto"
+  font-style: normal
+  font-weight: normal
+  src: url("chrome-extension://__MSG_@@extension_id__/fonts/Roboto/Roboto-Regular.ttf")
+
+@font-face
+  font-family: "Roboto"
+  font-style: normal
+  font-weight: bold
+  src: url("chrome-extension://__MSG_@@extension_id__/fonts/Roboto/Roboto-Bold.ttf")
 
 html, body, #root
   min-width: 400px
