Started work on having past broadcasts show for favorite streamers

--- a/src/App/components/LivestreamTile/style.module.sass
+++ b/src/App/components/LivestreamTile/style.module.sass
@@ -1,12 +1,14 @@
 @import '../../../variables'
 
+.container
+  margin-bottom: 10px
+
 .stream
   position: relative
   height: 65px
   overflow: hidden
   background: linear-gradient(270deg, $main-light-color 50%, $main-dark-color 100%)
   box-shadow: 0 0 5px 1px #00000000
-  margin-bottom: 10px
   transition: 0.5s
   cursor: pointer
 
