Changed some colors and layout

--- a/src/variables.sass
+++ b/src/variables.sass
@@ -1,5 +1,5 @@
-$main_dark_color: #0f0f0f
-$main-light-color: #222222
+$main_dark_color: hsl(0deg 0% 6%)
+$main-light-color: hsl(0deg 0% 15%)
 $main-border-color: #00000000
 
 $scrollbar-thumb-color: #585858
@@ -10,3 +10,4 @@ $stream-tags-border: #ffffff00
 
 $color-white: #dfdfdf
 $faded-white: rgb(255 255 255 / 40%)
+$white-60: hsl(0deg 0% 60%)
