--- a/src/App/components/LivestreamTile/style.module.sass
+++ b/src/App/components/LivestreamTile/style.module.sass
@@ -2,19 +2,19 @@
 
 .container
   margin-bottom: 10px
+  background-image: linear-gradient(270deg, rgb(255 255 255 / 0%) 40%, $main-dark-color 100%)
+  border-radius: 6px
 
 .stream
   position: relative
   height: 65px
   overflow: hidden
-  background: linear-gradient(270deg, $main-light-color 50%, $main-dark-color 100%)
   box-shadow: 0 0 5px 1px #00000000
-  transition: 0.5s
   cursor: pointer
+  border-radius: 6px
 
   &:hover
-    background: linear-gradient(270deg, $main-light-color 10%, $main-dark-color 100%)
-    transition: 0.5s
+    background-image: linear-gradient(270deg, rgb(255 255 255 / 0%) 0%, $main-dark-color 100%)
 
   .streamPicContainer
     position: relative
@@ -23,6 +23,7 @@
     .streamPic
       width: 115px
       height: 100%
+      border-radius: 6px
       &.hovered
         filter: blur(3px) brightness(40%)
 
@@ -43,14 +44,15 @@
     position: absolute
     bottom: 0
     color: $color-white
-    background-color: rgb(0 0 0 / 80%)
-    padding: 2px 7px 3px 3px
+    background-color: rgb(0 0 0 / 90%)
+    padding: 2px 7px 3px 6px
     font-size: 14px
     white-space: nowrap
     text-overflow: ellipsis
     overflow: hidden
     box-sizing: border-box
     max-width: 115px
+    border-radius: 0 5px 0 0
 
   .rightPart
     position: absolute
@@ -70,7 +72,7 @@
       font-size: 13px
 
     .streamGame
-      color: $stream-element-text
+      color: $white-60
       font-size: 13px
       font-style: italic
 
@@ -98,7 +100,7 @@
       background-color: $stream-tags-background
       border: 1px solid $stream-tags-border
       border-radius: 15px
-      right: 0px
+      right: 0
       bottom: 3px
       font-size: 14px
       font-weight: bold
