--- a/src/App/components/SmallVODTile/style.module.sass
+++ b/src/App/components/SmallVODTile/style.module.sass
@@ -9,11 +9,30 @@
   margin: 5px
   position: relative
   font-size: 0
+  border-radius: 5px
 
   .content
     position: relative
     font-size: 16px
     color: $color-white
+    width: 100%
+    height: 100%
+
+    .date
+      color: $color-white
+      position: absolute
+      top: 0
+      left: 0
+      border-radius: 0 0 5px 0
+      display: block
+      padding: 3px 4px 2px 4px
+      background-color: rgba(0, 0, 0, 0.6)
+      font-size: 14px
+      white-space: nowrap
+      text-overflow: ellipsis
+      overflow: hidden
+      box-sizing: border-box
+      max-width: 100px
 
   .thumbnail
     width: 100%
