--- a/src/App/components/VodLine/style.module.sass
+++ b/src/App/components/VodLine/style.module.sass
@@ -2,17 +2,18 @@
 
 .vodLine
   width: 100%
-  background: linear-gradient(180deg, #222222 0%, rgb(15 15 15 / 50%) 100%)
+  background: linear-gradient(180deg, rgb(255 255 255 / 0%) 0%, $main_dark_color 100%)
   padding: 4px 7px 7px 7px
   font-size: 0
   box-sizing: border-box
   overflow: hidden
+  border-radius: 8px
 
   .title
     display: inline-block
     font-size: 14px
     font-weight: bold
-    color: $faded-white
+    color: $white-60
     margin-bottom: 5px
     padding-left: 5px
 
@@ -22,6 +23,6 @@
     text-align: center
 
     .vod
-      margin: 0 5px 0 0
-      width: 119px
-      height: 67px
+      margin: 0 8px 0 0
+      width: 117px
+      height: 66px
