--- a/src/App/tabs/LivestreamTab/style.module.sass
+++ b/src/App/tabs/LivestreamTab/style.module.sass
@@ -12,12 +12,12 @@
   width: 100%
   height: 2px
   text-align: center
-  margin-bottom: 10px
+  margin: 12px 0
   box-sizing: border-box
   font-size: 0
   div
     width: 80%
     height: 100%
-    background-color: rgba(255, 255, 255, 0.1)
+    background-color: rgba(255, 255, 255, 0.3)
     display: inline-block
-    filter: blur(1px)
+    filter: blur(2px)
