--- a/src/App/components/VodLine/style.module.sass
+++ b/src/App/components/VodLine/style.module.sass
@@ -16,11 +16,12 @@
     color: $white-60
     margin-bottom: 5px
     padding-left: 5px
+    user-select: none
 
   .line
     white-space: nowrap
     width: 100%
-    text-align: center
+    text-align: left
 
     .vod
       margin: 0 8px 0 0
