Added "More" button

--- a/src/App/components/VodLine/style.module.sass
+++ b/src/App/components/VodLine/style.module.sass
@@ -15,8 +15,13 @@
     font-weight: bold
     color: $white-60
     margin-bottom: 5px
-    padding-left: 5px
+    padding: 0 5px
     user-select: none
+    box-sizing: border-box
+    width: 100%
+    .rightTitle
+      float: right
+      cursor: pointer
 
   .line
     white-space: nowrap
