Added functionnality to the vod tile

--- a/src/variables.sass
+++ b/src/variables.sass
@@ -11,3 +11,5 @@ $stream-tags-border: #ffffff00
 $color-white: #dfdfdf
 $faded-white: rgb(255 255 255 / 40%)
 $white-60: hsl(0deg 0% 60%)
+
+$twitch: #6441a5
