--- a/src/App/components/SmallVODTile/style.module.sass
+++ b/src/App/components/SmallVODTile/style.module.sass
@@ -10,7 +10,7 @@
 
 .vod
   display: inline-block
-  background-color: green
+  background: $twitch
   width: 160px
   height: 90px
   overflow: hidden
@@ -25,11 +25,14 @@
     z-index: 100
 
   .content
-    position: relative
+    position: absolute
     font-size: 16px
     color: $color-white
-    width: 100%
+    display: inline-block
+    vertical-align: top
     height: 100%
+    top: 0
+    left: 0
 
     .date
       color: $color-white
@@ -47,7 +50,26 @@
       box-sizing: border-box
       max-width: 100px
 
+  .expandedContent
+    display: inline-block
+    height: 100%
+    vertical-align: top
+    padding: 3px 3px 0 0
+    .title
+      font-size: 16px
+      max-width: 240px
+      text-overflow: ellipsis
+      overflow: hidden
+      font-weight: bold
+    .date
+      font-size: 14px
+    .duration
+      font-size: 14px
+
+
+
   .thumbnail
     width: 100%
     height: 100%
-    position: absolute
+    vertical-align: top
+    display: inline-block
