--- a/src/App/components/SmallVODTile/style.module.sass
+++ b/src/App/components/SmallVODTile/style.module.sass
@@ -9,8 +9,9 @@
   left: 0
 
 .vod
-  display: inline-block
-  background: $twitch
+  display: flex
+  column-gap: 5px
+  background: #ae97d7
   width: 160px
   height: 90px
   overflow: hidden
@@ -41,8 +42,8 @@
       left: 0
       border-radius: 0 0 5px 0
       display: block
-      padding: 3px 4px 2px 4px
-      background-color: rgba(0, 0, 0, 0.6)
+      padding: 3px 4px 4px 4px
+      background-color: rgba(0, 0, 0, 0.9)
       font-size: 14px
       white-space: nowrap
       text-overflow: ellipsis
@@ -51,10 +52,11 @@
       max-width: 100px
 
   .expandedContent
-    display: inline-block
-    height: 100%
-    vertical-align: top
-    padding: 3px 3px 0 0
+    display: flex
+    flex-direction: column
+    box-sizing: border-box
+    justify-content: space-evenly
+
     .title
       font-size: 16px
       max-width: 240px
@@ -71,5 +73,7 @@
   .thumbnail
     width: 100%
     height: 100%
+    min-width: 117px
     vertical-align: top
     display: inline-block
+    margin: 0 !important
