Adapting some things for firefox

--- a/src/App/components/TopBar/style.module.sass
+++ b/src/App/components/TopBar/style.module.sass
@@ -21,6 +21,7 @@
     height: 25px
     display: inline-block
     position: absolute
+    font-size: 12px
     background: linear-gradient(0deg, rgba(104,50,185,1) 9%, rgba(145,71,255,1) 100%)
     border-radius: 4px
     color: $color-white
