--- a/src/App/components/CategoryTitle/style.module.sass
+++ b/src/App/components/CategoryTitle/style.module.sass
@@ -1,5 +1,3 @@
-@import "../../../variables"
-
 .container
   text-align: left
   margin-bottom: 10px
@@ -24,4 +22,4 @@
 .text
   font-size: 16px
   font-weight: bold
-  color: $stream-element-text
+  color: var(--stream-element-text)
