--- a/src/App/App.module.sass
+++ b/src/App/App.module.sass
@@ -1,6 +1,4 @@
-@import "../variables"
-
 .appBody
   width: 100%
   height: 100%
-  background-color: $main-light-color
+  background-color: var(--main-light-color)
