--- a/src/App/Content/style.module.sass
+++ b/src/App/Content/style.module.sass
@@ -1,5 +1,3 @@
-@import "../../variables"
-
 .tabs
   width: 100%
   height: calc(100% - 70px)
@@ -12,9 +10,9 @@
     width: 7px
 
   &::-webkit-scrollbar-track
-    background: $main-light-color
+    background: var(--main-light-color)
 
   &::-webkit-scrollbar-thumb
-    background-color: $scrollbar-thumb-color
+    background-color: var(--scrollbar-thumb-color)
     border-radius: 10px
     border: 0 none #ffffff
