--- a/src/App/components/FollowedChannelsTile/style.module.sass
+++ b/src/App/components/FollowedChannelsTile/style.module.sass
@@ -1,5 +1,3 @@
-@import '../../../variables'
-
 .notification
   width: calc(50% - 7px)
   margin-left: 2px
@@ -9,9 +7,9 @@
   box-sizing: border-box
   background-color: #2c2c2c
   display: inline-block
-  color: $color-white
+  color: var(--color-white)
   text-align: left
-  box-shadow: 0 0 3px 0 $main-dark-color
+  box-shadow: 0 0 3px 0 var(--main-dark-color)
 
   .followedDate
     padding: 1px 7px 5px 7px
@@ -27,14 +25,14 @@
     display: inline-block
     font-size: 16px
     text-align: left
-    background-color: $main-dark-color
+    background-color: var(--main-dark-color)
     padding: 3px 9px 4px 5px
     box-sizing: border-box
     max-width: 170px
     max-height: 25px
     text-overflow: ellipsis
     overflow: hidden
-    color: $color-white
+    color: var(--color-white)
     cursor: pointer
     user-select: none
     white-space: nowrap
