--- a/src/App/components/LivestreamTile/style.module.sass
+++ b/src/App/components/LivestreamTile/style.module.sass
@@ -1,8 +1,6 @@
-@import '../../../variables'
-
 .container
   margin-bottom: 10px
-  background-image: linear-gradient(270deg, rgb(255 255 255 / 0%) 40%, $main-dark-color 100%)
+  background-image: linear-gradient(270deg, rgb(255 255 255 / 0%) 40%, var(--main-dark-color) 100%)
   border-radius: 6px
 
 .stream
@@ -14,7 +12,7 @@
   border-radius: 6px
 
   &:hover
-    background-image: linear-gradient(270deg, rgb(255 255 255 / 0%) 0%, $main-dark-color 100%)
+    background-image: linear-gradient(270deg, rgb(255 255 255 / 0%) 0%, var(--main-dark-color) 100%)
 
   .streamPicContainer
     position: relative
@@ -43,7 +41,7 @@
   .streamerName
     position: absolute
     bottom: 0
-    color: $color-white
+    color: var(--color-white)
     background-color: rgb(0 0 0 / 90%)
     padding: 2px 7px 3px 6px
     font-size: 14px
@@ -64,7 +62,7 @@
     box-sizing: border-box
 
     .streamTitle
-      color: $stream-element-text
+      color: var(--stream-element-text)
       white-space: nowrap
       text-overflow: ellipsis
       overflow: hidden
@@ -72,7 +70,7 @@
       font-size: 13px
 
     .streamGame
-      color: $white-60
+      color: var(--white-60)
       font-size: 13px
       font-style: italic
 
@@ -82,10 +80,10 @@
 
     .streamTime, .streamLanguage, .streamMature
       display: inline-block
-      color: $stream-element-text
+      color: var(--stream-element-text)
       padding: 1px 6px 1px 6px
-      background-color: $stream-tags-background
-      border: 1px solid $stream-tags-border
+      background-color: var(--stream-tags-background)
+      border: 1px solid var(--stream-tags-border)
       border-radius: 15px
       font-size: 12px
       font-weight: bold
@@ -95,10 +93,10 @@
 
     .viewerCount
       position: absolute
-      color: $stream-element-text
+      color: var(--stream-element-text)
       padding: 2px 8px 2px 5px
-      background-color: $stream-tags-background
-      border: 1px solid $stream-tags-border
+      background-color: var(--stream-tags-background)
+      border: 1px solid var(--stream-tags-border)
       border-radius: 15px
       right: 0
       bottom: 3px
