--- a/src/App/components/SearchBox/style.module.sass
+++ b/src/App/components/SearchBox/style.module.sass
@@ -1,11 +1,9 @@
-@import "../../../variables"
-
 .searchBox
   font-family: 'Inter', sans-serif
   display: inline-block
   border-radius: 4px
-  background-color: $main-light-color
-  border: 1px solid $main-border-color
+  background-color: var(--main-light-color)
+  border: 1px solid var(--main-border-color)
   box-sizing: border-box
   position: absolute
   margin-top: 5px
@@ -13,8 +11,8 @@
   height: 25px
   width: 210px
   padding-left: 5px
-  caret-color: $color-white
-  color: $color-white
+  caret-color: var(--color-white)
+  color: var(--color-white)
   font-weight: bold
 
   &:focus
