--- a/src/App/components/SmallVODTile/style.module.sass
+++ b/src/App/components/SmallVODTile/style.module.sass
@@ -1,5 +1,3 @@
-@import "../../../variables"
-
 .container
   display: inline-block
 
@@ -28,7 +26,7 @@
   .content
     position: absolute
     font-size: 16px
-    color: $color-white
+    color: var(--color-white)
     display: inline-block
     vertical-align: top
     height: 100%
@@ -36,7 +34,7 @@
     left: 0
 
     .date
-      color: $color-white
+      color: var(--color-white)
       position: absolute
       top: 0
       left: 0
