--- a/src/App/components/TopBar/style.module.sass
+++ b/src/App/components/TopBar/style.module.sass
@@ -1,16 +1,14 @@
-@import "../../../variables"
-
 .topBar
   height: 35px
   width: 100%
   position: fixed
-  background-color: $main-dark-color
-  border-bottom: 1px solid $main-border-color
+  background-color: var(--main-dark-color)
+  border-bottom: 1px solid var(--main-border-color)
   box-sizing: border-box
 
   .disconnectedTip
     display: inline-block
-    color: $color-white
+    color: var(--color-white)
     font-size: 15px
     margin-top: 8px
     margin-left: 7px
@@ -24,7 +22,7 @@
     font-size: 12px
     background: linear-gradient(0deg, rgba(104,50,185,1) 9%, rgba(145,71,255,1) 100%)
     border-radius: 4px
-    color: $color-white
+    color: var(--color-white)
     font-weight: bold
     padding-left: 9px
     padding-right: 9px
@@ -52,7 +50,7 @@
       position: relative
       margin-top: 9px
       margin-right: 6px
-      color: $color-white
+      color: var(--color-white)
       font-size: 14px
       font-weight: bold
       float: right
