--- a/src/App/components/VodLine/style.module.sass
+++ b/src/App/components/VodLine/style.module.sass
@@ -1,8 +1,6 @@
-@import "../../../variables"
-
 .vodLine
   width: 100%
-  background: linear-gradient(180deg, rgb(255 255 255 / 0%) 0%, $main_dark_color 100%)
+  background: linear-gradient(180deg, rgb(255 255 255 / 0%) 0%, var(--main_dark_color) 100%)
   padding: 4px 7px 7px 7px
   font-size: 0
   box-sizing: border-box
@@ -13,7 +11,7 @@
     display: inline-block
     font-size: 14px
     font-weight: bold
-    color: $white-60
+    color: var(--white-60)
     margin-bottom: 5px
     padding: 0 5px
     user-select: none
