--- a/src/App/tabs/NotificationsTab/style.module.sass
+++ b/src/App/tabs/NotificationsTab/style.module.sass
@@ -1,5 +1,3 @@
-@import '../../../variables'
-
 .tab
   padding: 0
 
@@ -15,11 +13,11 @@
   padding: 5px 7px 5px 7px
   margin: 5px 5px 7px 5px
   background-color: #2c2c2c
-  box-shadow: 0 0 3px 0 $main-dark-color
+  box-shadow: 0 0 3px 0 var(--main-dark-color)
   text-align: left
 
   span
-    color: $color-white
+    color: var(--color-white)
     font-size: 15px
 
   label
