--- a/src/index.sass
+++ b/src/index.sass
@@ -1,5 +1,3 @@
-@import "variables"
-
 @font-face
   font-family: "Inter"
   font-style: normal
@@ -32,4 +30,4 @@ html, body, #root
   margin: 0
   padding: 0
   font-family: 'Inter', sans-serif
-  background-color: $main-light-color
+  background-color: var(--main-light-color)
